--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ddddddda</string>
+    <string name="app_name">GF</string>
     <string name="hello_world">Hello world!</string>
     <string name="send_message">Send message</string>
     <string name="call_handler">Call handler</string>
