--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="refresh_data_str" >下拉刷新数据</string>
     <string name="refresh_data_success_str" >刷新成功</string>
     <string name="new_task_coin_task_coin_text">洋葱币 +%d</string>
+    <string name="new_task_reward_coin_count">+d%</string>
 </resources>
